--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,31 @@
-*
-!coredns
+# Git 相关
+.git
+.github
+
+# 构建产物
+coredns
+*.test
+*.out
+
+# 日志文件
+logs/
+*.log
+
+# 文档
+ReadMeOrigin/
+ReadMeChinaDomainSwitch/
+*.md
+!DOCKER_QUICKSTART.md
+
+# 临时文件
+*.tmp
+*.bak
+*.swp
+
+# IDE 配置
+.vscode/
+.idea/
+
+# 测试脚本
+test-*.sh
+start*.sh
