--- a/plugin.cfg
+++ b/plugin.cfg
@@ -1,77 +1,10 @@
-# Directives are registered in the order they should be executed.
-#
-# Ordering is VERY important. Every plugin will feel the effects of all other
-# plugin below (after) them during a request, but they must not care what plugin
-# above them are doing.
+# 最小化 CoreDNS 插件配置
+# 只包含域名解析基本功能和 domainswitch 插件
 
-# How to rebuild with updated plugin configurations: Modify the list below and
-# run `go generate && go build`
-
-# The parser takes the input format of:
-#
-#     <plugin-name>:<package-name>
-# Or
-#     <plugin-name>:<fully-qualified-package-name>
-#
-# External plugin example:
-#
-# log:github.com/coredns/coredns/plugin/log
-# Local plugin example:
-# log:log
-
-root:root
-metadata:metadata
-geoip:geoip
-cancel:cancel
-tls:tls
-quic:quic
-timeouts:timeouts
-multisocket:multisocket
-reload:reload
-nsid:nsid
-bufsize:bufsize
-bind:bind
-debug:debug
-trace:trace
-ready:ready
-health:health
-pprof:pprof
-prometheus:metrics
-errors:errors
-log:log
-dnstap:dnstap
-local:local
-dns64:dns64
-acl:acl
-any:any
-chaos:chaos
-loadbalance:loadbalance
-tsig:tsig
-cache:cache
-rewrite:rewrite
-header:header
-dnssec:dnssec
-autopath:autopath
-minimal:minimal
-template:template
-transfer:transfer
-hosts:hosts
-route53:route53
-azure:azure
-clouddns:clouddns
-k8s_external:k8s_external
-kubernetes:kubernetes
-file:file
-auto:auto
-secondary:secondary
-etcd:etcd
-loop:loop
-domainswitch:domainswitch
-forward:forward
-grpc:grpc
-erratic:erratic
-whoami:whoami
-on:github.com/coredns/caddy/onevent
-sign:sign
-view:view
-nomad:nomad
+# 核心功能插件（按执行顺序）
+errors:errors          # 错误处理
+log:log               # 日志记录
+cache:cache           # DNS 缓存
+template:template     # 模板处理（用于 IPv6 过滤）
+domainswitch:domainswitch  # 你的自定义域名分流插件
+forward:forward       # DNS 转发（备用，domainswitch 内部实现了转发）
