--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # only add build artifacts concerning coredns - no editor related files
 coredns
 coredns.exe
-Corefile
+conf/Corefile
 build/
 release/
 vendor/
