add host support

--- a/plugin.cfg
+++ b/plugin.cfg
@@ -2,9 +2,10 @@
 # 只包含域名解析基本功能和 domainswitch 插件
 
 # 核心功能插件（按执行顺序）
-errors:errors          # 错误处理
-log:log               # 日志记录
-cache:cache           # DNS 缓存
-template:template     # 模板处理（用于 IPv6 过滤）
-domainswitch:domainswitch  # 你的自定义域名分流插件
-forward:forward       # DNS 转发（备用，domainswitch 内部实现了转发）
+hosts:hosts
+errors:errors
+log:log
+cache:cache
+template:template
+domainswitch:domainswitch
+forward:forward
